# libuv

./: CMakeLists.txt  Makefile  config-unix.mk
include/: uv.h
include/uv-private/: uv-unix.h  uv-win.h
src/: uv-common.c
src/unix/: darwin.c  thread.c
src/unix/linux/: linux-core.c
src/win/: thread.c
test/: test-condvar.c  test-list.h  test-spawn.c  test-thread.c
